--- a/Dottie/Dottie/Dottie.csproj
+++ b/Dottie/Dottie/Dottie.csproj
@@ -179,6 +179,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Css\Favourite.css" />
     <Content Include="Content\Css\HomeProduct.css" />
     <Content Include="Content\Css\MasterLayout.css" />
     <Content Include="Content\Css\Register.css" />
